# fiap-tech-challenge-fase-1

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
artifacts/0a0042bd938e4802a61d73b4297d797c/artifacts/: estimator.html
artifacts/b856c406b6904ce0a17e8cd0b8d94d27/artifacts/: metric_info.json
artifacts/cf797ea69a2143e98bae4f4f8359de38/artifacts/: estimator.html
artifacts/dd8c9372248b48a9b56674108ad1b570/artifacts/: estimator.html
artifacts/models/: data_processing.joblib
artifacts/models/m-0c802c182db048ba882f411d4788cefd/artifacts/: MLmodel
artifacts/models/m-3a2d65c62eaf44a299d46ad1c80da816/artifacts/: MLmodel
artifacts/models/m-3dfc9fde928046d8b97447419f176332/artifacts/: MLmodel  model.pkl
artifacts/models/m-46137c3fae6f4f94bc326bd3aaf20077/artifacts/: MLmodel
artifacts/models/m-632c1b04e69c4f4ebd1cd42b28ee3911/artifacts/: MLmodel  model.pkl  python_env.yaml
artifacts/models/m-77037a6a99fe4843a8b612e8cbce8b70/artifacts/: MLmodel
artifacts/models/m-8b3b3d1758764a0a861814ffc3628027/artifacts/: MLmodel
artifacts/models/m-9b732c98ec4b4bb58b71cb1dcba6693f/artifacts/: MLmodel  conda.yaml
artifacts/models/m-9b732c98ec4b4bb58b71cb1dcba6693f/artifacts/data/: model.pth
artifacts/models/m-9dac957b9763407da6994b535ebbdbe1/artifacts/: MLmodel  model.pkl
artifacts/models/m-9df89e6b2e6441f680d16146fd1db6f0/artifacts/: MLmodel  requirements.txt
artifacts/models/m-9df89e6b2e6441f680d16146fd1db6f0/artifacts/data/: model.pth
artifacts/models/m-b16d910815f748e098ff89595315b365/artifacts/: MLmodel
artifacts/models/m-c5775e10ae2842a5a2754dc853afc3c8/artifacts/: MLmodel  conda.yaml  model.pkl  requirements.txt
artifacts/models/m-cc2242c8d4104cc08320c7d55392ed30/artifacts/: MLmodel
artifacts/models/m-ecb2dc16387447769f22733a345e2949/artifacts/: MLmodel
artifacts/models/m-f8bdaddc9ac645348333bce51bb36319/artifacts/: MLmodel
data/interim/: telco_customer_churn_preprocessed.csv
docs/: Arquitetura.md  MLcanvas.html  ModelCard.md  PlaybookIncidentes.md
docs/canvas/: MLcanvas.html
grafana/: Dockerfile
grafana/provisioning/datasources/: datasource.yml
notebooks/: MLP_tests.ipynb  best_model.pt  data_exploration.ipynb  mlflow.db
notebooks/utils/: model_training.py  pipelines.py
prometheus/: Dockerfile  alerts.yml  entrypoint.sh  prometheus.yml
src/api/: logging_config.py  main.py  metrics.py
src/api/middleware/: monitoring.py
src/api/prometheus/: alerts.yml  prometheus.yml
src/api/schemas/: health.py  predict.py
src/models/model_package/: Makefile  README.md  requirements-dev.txt  setup.py
src/models/model_package/mlp_package/: customer_churn_dataframe_schema.py  data_pipeline.py  model_load.py
src/models/model_package/model_package/: __init__.py  customer_churn_dataframe_schema.py  data_pipeline.py  flexible_model.py  model_load.py
src/models/model_package/model_package/models/: model_weights_v1.pth
src/models/model_package/tests/: test_data_pipeline.py  test_flexible_model.py  test_model_load.py
tests/: test_smoke.py  test_smoke_and_bias.py
