[project]
name = "fiap-tech-challenge-fase-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "pandas>=2.3.3",
    "pandera>=0.31.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.7",
    "seaborn>=0.13.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=html"
test-package = "pytest src/models/model_package/tests -v"
lint = "ruff check src/ tests/ notebooks/utils/"
lint-fix = "ruff check src/ tests/ notebooks/utils/ --fix"
format = "ruff format src/ tests/ notebooks/utils/"
format-check = "ruff format src/ tests/ notebooks/utils/ --check"
check = "task lint && task format-check && task test"
clean = "rm -rf .pytest_cache .coverage htmlcov __pycache__ .ruff_cache"
mlflow = "mlflow ui"
make-pack = "cd src/models/model_package && make all"